# emi-monorepo

./: .$making_a_pr.drawio.bkp  .$specialized_procedure_models_with_trackables.drawio.bkp  .$trackable_categories.drawio.bkp  .gitignore  CONTRIB.md  CONTRIBUTING.md  Cargo.toml  README.md  env.env  making_a_pr.drawio  molecular_formula.profdata  procedure_illustration.drawio  procedure_to_procedure_model_constraints.drawio  rust-toolchain.toml  rustc-ice-2024-03-30T16_33_59-411643.txt  rustc-ice-2024-03-30T16_33_59-411645.txt  rustc-ice-2024-03-30T16_34_02-411677.txt  rustc-ice-2024-03-30T16_34_02-411678.txt  rustc-ice-2024-03-30T16_35_03-412016.txt  rustc-ice-2024-03-30T16_35_03-412017.txt  rustc-ice-2024-03-30T16_35_07-412058.txt  rustc-ice-2024-03-30T16_35_07-412059.txt  rustc-ice-2024-03-30T16_35_41-412422.txt  rustc-ice-2024-03-30T16_35_41-412424.txt  rustc-ice-2024-03-30T16_35_44-412469.txt  rustc-ice-2024-03-30T16_35_44-412470.txt  rustc-ice-2024-03-30T16_36_03-412799.txt  rustc-ice-2024-03-30T16_36_03-412800.txt  rustc-ice-2024-03-30T16_36_06-412843.txt  rustc-ice-2024-03-30T16_36_06-412844.txt  rustc-ice-2024-03-30T16_36_25-412859.txt  rustc-ice-2024-03-30T16_36_25-412860.txt  rustc-ice-2024-03-30T16_36_28-412872.txt  rustc-ice-2024-03-30T16_36_28-412873.txt  rustc-ice-2024-03-30T16_36_48-412891.txt  rustc-ice-2024-03-30T16_36_48-412892.txt  rustc-ice-2024-03-30T16_36_51-412905.txt  rustc-ice-2024-03-30T16_36_51-412906.txt  rustc-ice-2024-03-30T16_36_55-412937.txt  rustc-ice-2024-03-30T16_44_47-414221.txt  (+19 more)
bindings/enrichers/: Cargo.toml  README.md
bindings/enrichers/src/: lib.rs
bindings/sirius/: .gitignore  CONTRIB.md  Cargo.toml  README.md  dot_env_template
bindings/sirius-bindings/: CONTRIB.md  Cargo.toml  README.md
bindings/sirius-bindings/fuzz/: Cargo.toml  README.md
bindings/sirius-bindings/src/: builder.rs  lib.rs  sirius.rs  sirius_config.rs  versions.rs
bindings/sirius-bindings/tests/: test_sirius.rs
bindings/sirius/examples/: run_v6.rs
bindings/sirius/fuzz/: README.md
bindings/sirius/src/: builder.rs  lib.rs  semantic.rs  sirius.rs  sirius_config.rs  sirius_parameters.rs  versions.rs
bindings/sirius/tests/: test_sirius.rs  test_sirius_panic.rs  test_v6_cli_like.rs  test_v6_run.rs
data-migrations/directus-migration/: Cargo.toml  README.md
data-migrations/directus-migration/directus-migration-builder/: Cargo.toml  README.md  time_requirements_report.md
data-migrations/directus-migration/src/: codegen.rs  error.rs  lib.rs  main.rs  migrations.rs
data-migrations/init-db/: Cargo.toml
data-migrations/init-db/csvs/: document_formats.csv  instrument_categories.csv  instrument_states.csv  nameplate_categories.csv  ranks.csv  sample_states.csv  step_model_categories.csv  tool_categories.csv
data-migrations/init-db/src/: consistency_constraints.rs  csv_migrations.rs  errors.rs  init.rs  lib.rs  migrations.rs
data-migrations/init-db/tests/: test_init_db.rs
data-migrations/init-migration/: Cargo.toml  README.md
data-migrations/init-migration/src/: brands.rs  commercial_products.rs  error.rs  lib.rs  login_providers.rs  main.rs  procedure_models.rs  reagents.rs  step_models.rs  users.rs
data-migrations/init-migration/tests/: test_init_migration.rs
data-retrieval/downloader/: Cargo.toml  README.md
data-retrieval/downloader/data/: data.tar  document.txt  tarball.tar
data-retrieval/downloader/src/: compression_extension.rs  downloader.rs  errors.rs  lib.rs  report.rs  reports.rs  task.rs  utils.rs
data-retrieval/downloader/tests/: test_compression_extension.rs  test_downloader.rs
data-retrieval/molecule-occurence/: .gitignore  Cargo.toml
data-retrieval/molecule-occurence/src/: main.rs
data-retrieval/sparql-client/: Cargo.toml  README.md  lotus.rq
data-retrieval/sparql-client/src/: errors.rs  lib.rs  main.rs
data-retrieval/sparql-client/tests/: integration_tests.rs
data-retrieval/taxonomy-fetcher/: .gitignore  Cargo.toml  README.md
data-retrieval/taxonomy-fetcher/src/: errors.rs  helpers.rs  impls.rs  lib.rs  main.rs  traits.rs  utils.rs
data-retrieval/taxonomy-fetcher/test-data/: mock_taxa.csv
data-retrieval/taxonomy-fetcher/tests/: download_tests.rs  process_tests.rs  test_col.rs  test_ltree.rs  test_ncbi.rs  (+2 more)
data-structures/algebra/: Cargo.toml  README.md
data-structures/graph/: Cargo.toml  README.md
data-structures/mass-spectrometry/: Cargo.toml  README.md
data_migrations/directus_migration/: CONTRIB.md  Cargo.toml  Dockerfile  README.md
data_migrations/init_db/: CONTRIB.md  Cargo.toml  README.md  most_expensive_queries.json  time_requirements_report.md
data_migrations/init_migration/: .gitignore  Cargo.toml  dbgi_procedure_template.mermaid  emi_insect_procedure_template.mermaid  emi_procedure_template.mermaid  test_init_migration.dot  test_init_migration_erd.mermaid  test_init_migration_flowchart.mermaid
data_structures/algebra/: Cargo.toml
data_structures/graph/: Cargo.toml
data_structures/mass_spectrometry/: Cargo.toml
data_structures/multi_ranged/: Cargo.toml  README.md
data_structures/rosetta_uuid/: Cargo.toml
utils/diesel-pgrx/: Cargo.toml  README.md
utils/diesel_pgrx/: Cargo.toml  README.md
utils/diesel_pgrx_derive/: Cargo.toml  README.md
utils/iso_codes/: Cargo.toml  README.md  docker-compose.yaml
utils/rosetta-timestamp/: Cargo.toml  README.md
web/backend/: .gitignore  .userinput.json  CONTRIB.md  CUSTOM_TYPES.md  Cargo.toml  Dockerfile  DockerfileDeploy  HOW_TO_DEPLOY.md  README.md  clean_ottl_taxonomy.py  decrease_directory_counter.py  default_env  delete_empty_directories.py  densify_directory_counter.py  diesel.toml  docker-compose.yml  generate_models.py  increase_directory_counter.py  insert_migration.py  migration_hashes.json  replacements.json  requirements.txt  retrieve_chemont.py  retrieve_countries.py  retrieve_organizations.py  retrieve_taxa.py  retrieve_taxons.py  start.sh  start_deploy.sh
web/core-structures/: .gitignore  Cargo.toml  Dockerfile  README.md
web/core_structures/: .gitignore  Cargo.toml  build.rs  sql.sql  time_requirements_report.md
(+12009 files in other folders)
