[workspace]
resolver = "2"

members = [
  "bindings/sirius-bindings",
  "web/backend",
  "web/frontend",
  "web/web_common/web_common_traits",
  "web/web_common/webcodegen",
  "web/web_common/csqlv",
  "web/web_common/snake-case-sanitizer",
  "web/web_common/pgrx_validation",
  "web/web_common/pgrx_validation_derive",
  "web/web_common/validation-errors",
  "web/web_common/backend-request-errors",
  "web/web_common/pg2sqlite",
  "data-retrieval/taxonomy-fetcher",
  "data-retrieval/downloader",
  "web/core-structures",
  "web/core-structures/core-structures-builder",
  "web/web_common/font_awesome_icons",
  "utils/diesel_migrations_utils",
  "utils/common-traits",
  "utils/inflector",
  "utils/time-requirements",
  "data-structures/graph",
  "data-structures/algebra",
  "data-migrations/directus-migration/directus-migration-builder",
  "data-migrations/directus-migration",
  "data-structures/mass-spectrometry",
  "utils/functional-properties",
  "data-structures/rosetta-uuid",
  "data-structures/sorted-vec",
  "utils/functional-properties",
  "utils/image-validation",
  "utils/mime-types",
  "web/web_common/ws-messages",
  "utils/rosetta-timestamp",
  "utils/iter-utils",
  "data-migrations/init-migration",
  "web/web_common/sqlite-migration-generator", "utils/macro-utils", "web/web_common/iso_codes", "web/web_common/rosetta-url", "data-migrations/init-db", "web/web_common/reference-docker",

]

[workspace.dependencies]
actix-ws = "0.3.0"
init-migration = { path = "data-migrations/init-migration" }
init-db = { path = "data-migrations/init-db" }
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
url = "2.5.4"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
flate2 = "1.0.35"
tar = "0.4.43"
infer = "0.19"
csv = "1.3.1"
bytes = "1.10.0"
bincode = { version = "2", features = ["serde"] }
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs.git", branch = "main" }
arbitrary = { version = "1", features = ["derive"] }
diesel = { git = "https://github.com/LucaCappelletti94/diesel.git", branch = "supports_on_conflict_clause_where", features = [
  "extras",
] }
diesel-async = { git = "https://github.com/LucaCappelletti94/diesel_async", branch = "custom-diesel" }
diesel_full_text_search = "2.2"
redis = { version = "0.29", features = ["tokio-comp"] }
postgis_diesel = { git = "https://github.com/LucaCappelletti94/postgis-diesel.git", default-features = false, branch = "custom-diesel" }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
yew = { version = "0.21.0", features = ["csr"] }
strum_macros = "0.27"
zip = "2.6"
reference-docker = { path = "web/web_common/reference-docker" }
async-trait = "0.1.88"
pgrx = "0.14.1"
pgrx-tests = "0.14.1"
image = "0.25.6"
rsa = { version = "0.9.8" }
rand = { version = "0.8" }
base64ct = { version = "1.6" }
pgrx-sql-entity-graph = "0.14.1"
gloo = "0.11.0"
criterion = { version = "0.5", features = ["html_reports"] }
rosetta-uuid = { path = "data-structures/rosetta-uuid" }
rosetta-timestamp = { path = "utils/rosetta-timestamp" }
taxonomy-fetcher = { path = "data-retrieval/taxonomy-fetcher" }
csqlv = { path = "web/web_common/csqlv", default-features = false }
iso_codes = { path = "web/web_common/iso_codes" }
font_awesome_icons = { path = "web/web_common/font_awesome_icons", features = ["serde"] }
testcontainers = { version = "0.23.2" }
web_common_traits = { path = "web/web_common/web_common_traits" }
webcodegen = { path = "web/web_common/webcodegen" }
diesel_migrations_utils = { path = "utils/diesel_migrations_utils" }
common-traits = { path = "utils/common-traits" }
functional-properties = { path = "utils/functional-properties" }
inflector = { path = "utils/inflector" }
core-structures = { path = "web/core-structures" }
core-structures-builder = { path = "web/core-structures/core-structures-builder" }
ws-messages = { path = "web/web_common/ws-messages" }
iter-utils = { path = "utils/iter-utils" }
regex = "1.11"
plotters = "0.3.7"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.50"
trybuild = "1"
const_format = "0.2.34"
log = "0.4"
rustfft = "6.2.0"
lender = "0.3.1"
sql_minifier = "0.1.5"
blake3 = "1.8.2"
api-path = { path = "web/web_common/api-path" }
time-requirements = { path = "utils/time-requirements" }
algebra = { path = "data-structures/algebra" }
graph = { path = "data-structures/graph" }
sorted-vec = { path = "data-structures/sorted-vec" }
pgrx_validation = { path = "web/web_common/pgrx_validation" }
pgrx_validation_derive = { path = "web/web_common/pgrx_validation_derive" }
pg2sqlite = { path = "web/web_common/pg2sqlite" }
sqlite-migration-generator = { path = "web/web_common/sqlite-migration-generator" }
validation-errors = { path = "web/web_common/validation-errors" }
backend-request-errors = { path = "web/web_common/backend-request-errors" }
downloader = { path = "data-retrieval/downloader" }
macro-utils = { path = "utils/macro-utils" }
lazy_static = { version = "1.5.0" }
validator = { version = "0.20", features = ["derive"] }
web-sys = { version = "0.3.77" }
cached = "0.55"

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"

[workspace.lints.clippy]
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
pedantic = { level = "deny", priority = -1 }

[profile.bench]
debug = true # Include debug info.
