[package]
name = "sirius-bindings"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
keywords = ["metabolomics", "SIRIUS", "mass-spectrometry"]
categories = ["api-bindings", "science"]
authors = ["Earth Metabolome Initiative"]
repository = "https://github.com/earth-metabolome-initiative/emi-monorepo/tree/main/bindings/sirius-bindings"
description = "Rust bindings for the SIRIUS metabolomics tool"
exclude = ["CONTRIB.md", ".DS_Store", "tests/.DS_Store", ".cargo_vcs_info.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
is_executable = "1.0.4"
arbitrary = { version = "1", optional = true, features = ["derive"] }
num_cpus = "1.16.0"

# we only require the arbitrary derivable crate when fuzz is enabled
[features]
fuzz = ["dep:arbitrary"]
