[package]
name = "directus_migration"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel-async.workspace = true
rosetta-uuid = { workspace = true, features = ["serde", "postgres"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel.workspace = true
postgis_diesel.workspace = true
web_common_traits.workspace = true
tokio.workspace = true
const_format.workspace = true
core-structures.workspace = true

[features]
default = ["serde", "64-column-tables"]
serde = []
postgres = ["diesel-async/postgres", "diesel/extras", "postgis_diesel/diesel", "core-structures/postgres"]
32-column-tables = ["postgres"]
64-column-tables = ["32-column-tables", "diesel/64-column-tables"]
