[package]
name = "molecule-occurence"
version = "0.1.0"
edition = "2021"

[dependencies]
downloader = { path = "../downloader" }
indicatif.workspace = true
num_cpus = "1.16.0"
rayon.workspace = true
regex.workspace = true
tokio.workspace = true

[profile.release]
debug = false # Include debug info.
opt-level = 3
