[package]
name = "sparql-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1" # URL encoding crate
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"