[package]
name = "taxonomy-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6"
tempfile = "3"
openssl = { version = "0.10", features = ["vendored"] }
csv = "1.2"
flate2 = "1.0"
tar = "0.4"
chrono = "0.4.39"
downloader = {path = "../downloader"}
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
indicatif.workspace = true