[package]
name = "taxonomy-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "0.6"
tempfile = "3"
openssl = { version = "0.10", features = ["vendored"] }
tar = "0.4"
downloader = {path = "../downloader"}
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
indicatif.workspace = true
font_awesome.workspace = true
csv.workspace = true
flate2.workspace = true
