[package]
name = "algebra"
version = "0.1.0"
edition = "2024"

[dependencies]
common-traits.workspace = true
serde = {workspace = true, optional = true}
arbitrary = {workspace = true, optional = true}

[lints]
workspace = true

[features]
serde = ["dep:serde", "common-traits/serde"]
arbitrary = ["dep:arbitrary"]
