[package]
name = "directus_migration"
version = "0.1.0"
edition = "2024"

[dependencies]
rosetta_uuid = { workspace = true, features = ["serde", "postgres"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel.workspace = true
postgis_diesel.workspace = true
web_common_traits.workspace = true
tokio.workspace = true
const_format.workspace = true
rosetta_timestamp = { workspace = true, features = ["serde", "postgres"] }
core_structures = { workspace = true, features = ["backend"] }
anyhow.workspace = true
init_migration.workspace = true
directus_codegen.workspace = true

[dev-dependencies]
init_db.workspace = true
dotenvy.workspace = true
reference_docker.workspace = true

[lints]
workspace = true

[features]
default = ["serde", "64-column-tables"]
serde = []
postgres = [
  "diesel/extras",
  "postgis_diesel/postgres",
  "core_structures/postgres",
]
32-column-tables = ["postgres"]
64-column-tables = ["32-column-tables", "diesel/64-column-tables"]
