[package]
name = "init_db"
version = "0.1.0"
edition = "2024"

[dependencies]
taxonomy_fetcher.workspace = true
diesel = { workspace = true, features = ["postgres"] }
csqlv = { workspace = true, features = ["diesel"] }
diesel_migrations_utils.workspace = true
webcodegen.workspace = true
procedure_codegen.workspace = true
time_requirements.workspace = true

[dev-dependencies]
tokio.workspace = true
reference_docker.workspace = true
serde_json.workspace = true

[lints]
workspace = true
