[package]
name = "init_migration"
version = "0.1.0"
edition = "2024"

[dependencies]
core_structures = { workspace = true, features = ["backend"] }
core_structures_vis = { workspace = true }
diesel.workspace = true
tokio.workspace = true
chrono.workspace = true
cas_codes.workspace = true
anyhow.workspace = true
web_common_traits = { workspace = true, features = ["backend"] }

[dev-dependencies]
tokio.workspace = true
init_db.workspace = true
reference_docker.workspace = true
dotenvy.workspace = true

[lints]
workspace = true
