[package]
name = "graph"
version = "0.1.0"
edition = "2024"

[dependencies]
algebra.workspace = true
sorted_vec.workspace = true
common_traits.workspace = true
serde = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
numeric_common_traits.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["alloc", "sorted_vec/std"]
arbitrary = ["algebra/arbitrary", "dep:arbitrary"]
alloc = ["sorted_vec/alloc"]
serde = ["algebra/serde", "dep:serde"]
